--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
-  text-align: center;
-}
+import logo from './logo.svg';
+import React, { Component } from 'react';
+import './header.css'
+import Recipe from './components/Recipe';
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+class App extends Component {
+  state = {
+    value:"",
+    info:"",
+    on:false,
+    postion:false,
+  }
+    
+   callApi = async(e)=>{
+    const valu = document.getElementById("input").value;
+    const URL=`https://themealdb.com/api/json/v1/1/search.php?s=${valu}`;
+    try{
+      let data =  await fetch(URL);
+      const apiinfo = await data.json();
+      this.setState({info:apiinfo})
+      this.setState({on:!this.state.on,postion:!this.state.postion});
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    }
+  catch{
+   this.state.handel()
+  }   
+
+  }
+  render() { 
+    return ( 
+      <React.Fragment>
+ <div className="container">
+    <h2 > Recipe Finder</h2>
+    <input id="input" type="text"  placeholder="Enter the Name of the dish" />
+   <button  onClick={()=>this.callApi()} id="but">
+     Get Ingrediants
+   </button>
+  <h3>Type a Dish Name to Search For its Ingrediant</h3>
+   </div>
+   <div>
+  {this.state.on && this.state.postion?<Recipe datafromapi={this.state.info}/>:null} 
+ </div> 
+      </React.Fragment>
+   );
   }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+ 
+export default App;
